--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -7,6 +7,16 @@ blockquote {
   quotes: "\201C""\201D""\2018""\2019";
   font-size: 12px;
 }
+
+blockquote:before {
+  color: #ccc;
+  content: "note:";
+  font-size: 12px;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: 0em;
+}
+
 blockquote p {
   display: inline;
 }
@@ -17,3 +27,59 @@ blockquote p {
   margin-right: auto;
   width: 10%;
 }
+
+/* highlighting text with mouse */
+
+::selection {
+  color: white;
+  background: #00923F; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  color: white;
+  background: #00923F; /* WebKit/Blink Browsers */
+}
+
+/* color active dropdown tab */
+
+ul.dropdown-menu>li.active>a:hover{
+    background: #00923F !important;
+}
+
+ul.dropdown-menu>li.active>a{
+    background: #00923F !important;
+}
+
+/* Hyperlinks with a target attribute */
+
+/* unvisited link */
+a:link {
+  color: #00923F;
+}
+
+/* visited link */
+a:visited {
+  color: #00923F;
+}
+
+/* mouse over link */
+a:hover {
+  color: #69626d;
+}
+
+/* selected link */
+a:active {
+  color: #00923F;
+}
+
+/* code chunk */
+pre {background-color: #222222;
+     color: white;
+     border-radius: 5px;}
+
+.fl      {color: #f44336;}  /* numerics */
+.fu      {color: #FF9800;}  /* function */
+.ch,.st  {color: #A8E0FF;}  /* string */
+.co      {color: #B0BEC5;}  /* comment */
+
+.kw {color: #FF9800;}         /* functions */
+.sourceLine {color: #FCE4EC;} /* functions */
